Add tests for SqlSegmentsMetadataQuery